新版公共头

--- a/css/discuz/discuz-list.less
+++ b/css/discuz/discuz-list.less
@@ -98,7 +98,9 @@
 			border-bottom: 1px solid #C2D5E3;
 			//字体与图片
 			.fzlh(12px,36px);
-			img{.y;}
+			img{.y;
+				//margin-left:2px;
+			}
 
 			&:hover{
 				background-color:#EAF8FC;
