--- a/css/global.less
+++ b/css/global.less
@@ -43,7 +43,7 @@
 /*module 公共模块
 ------------------------------------------*/
 @import url("module/search.less");		//搜索
-@import url("module/header.less");		//头部
+/*@import url("module/header.less");		//头部*/
 @import url("module/nav.less");			//导航
 @import url("module/footer.less");		//底部
 @import url("module/dialog.less");		//对话框
@@ -198,13 +198,17 @@
 /*bbs 默认论坛模板
 ------------------------------------------*/
 @import url("bbs/discuz.less");					//论坛导航
-@import url("bbs/treeview.less");				//树形菜单
 @import url("bbs/bbs-layout.less");				//论坛样式
 @import url("bbs/bbs-sidebar.less");			//论坛样式
 @import url("bbs/bbs-list.less");				//论坛样式
 @import url("bbs/bbs-post.less");				//论坛样式
 @import url("bbs/bbs-view.less");				//论坛样式
-
+@import url("mix/mix-sidebar.less");			//论坛样式
+@import url("mix/mix-list.less");				//论坛样式
+@import url("mix/mix-post.less");				//论坛样式
+@import url("mix/mix-view.less");				//论坛样式
+@import url("mix/mix.less");					//论坛样式
+@import url("plugin/treeview.less");			//树形菜单
 
 /*raid 团队
 ------------------------------------------*/
