--- a/css/macro/m-macro-view.less
+++ b/css/macro/m-macro-view.less
@@ -115,3 +115,16 @@
 		.dbi;.y;
 	}
 }
+
+.m-macro-replyac{
+	background-color:#FBFB5D;
+	.x;
+	color:#222;
+	padding:5px 10px;
+	b{padding:0 5px;.bold;color:#ff0000;}
+	a{text-decoration:underline;.color(@bluex);}
+}
+
+.tool-container{
+	.m-macro-replyac{margin-top:10px;}
+}
