--- a/css/module/nav.less
+++ b/css/module/nav.less
@@ -29,6 +29,10 @@
 				&.new{
 					background: url('@{url}user/new.gif')no-repeat right 35%;
 				}
+				&.disabled{
+					.color(#999,#999);
+					cursor:default;
+				}
 			}
 		}
 		.on{
