--- a/template/default/common/footer.htm
+++ b/template/default/common/footer.htm
@@ -120,6 +120,13 @@
 			<!--{/if}-->
 		</div>
 	</div>
+
+	<!-- jx3pve:c-dialog-->
+	<!--{template common/dialog}-->
+
+	<!-- jx3pve:c-float -->
+	<!--{template common/float}-->
+
 	<div class="c-showbox" id="c-showbox">
 		<span class="c-showbox-close" id="c-showbox-close" title="关闭"></span>
 		<div class="c-showbox-content" id="c-showbox-content"></div>
