--- a/template/default/jx3pve/u_addef.htm
+++ b/template/default/jx3pve/u_addef.htm
@@ -4,7 +4,7 @@
 
 	<!-- 帖子图标·自定义图标·资料片等 -->
 	<!--{if $thread[icon] >= 0}-->
-		<img class="u-addef-sp" src="{STATICURL}image/stamp/{$_G[cache][stamps][$thread[icon]][url]}" alt="{$_G[cache][stamps][$thread[icon]][text]}" align="absmiddle" />
+		<img class="u-addef-sp" src="http://img.jx3pve.com/static/image/stamp/{$_G[cache][stamps][$thread[icon]][url]}" alt="{$_G[cache][stamps][$thread[icon]][text]}" align="absmiddle" />
 	<!--{/if}-->
 
 	<!-- 快速回复 -->
