--- a/template/mix/forum/post.htm
+++ b/template/mix/forum/post.htm
@@ -113,7 +113,7 @@
 			<!--{subtemplate jx3pve/w_route}-->
 
 			<!-- jx3pve:tips -->
-			<div class="macro-post-tips">
+			<div class="m-mix-post-tips">
 				<!--{block/1265}-->
 			</div>
 
