--- a/css/global/icon.less
+++ b/css/global/icon.less
@@ -116,3 +116,9 @@
 		background:url('@{url}user/btn-blue.png') no-repeat 0 -38px;
 	}
 }
+
+//faq问号
+.u-icon-faqtips{
+    background: url('@{url}icon/faq.gif') no-repeat 0 0;
+    .dbi;.size(13px);.y;
+}
