--- a/template/default/common/css.htm
+++ b/template/default/common/css.htm
@@ -1,4 +1,4 @@
 <link rel="stylesheet" href="http://css.jx3pve.com/css/global.css" type="text/css" />
-<!--[if IE 9]>
-<style>.e-mask{filter:none !important;}</style>
-<![endif]-->
+<!-- this style is for public modules -->
+<link rel="stylesheet" href="http://css.jx3pve.com/css/common.css" type="text/css" />
+<!--[if IE 9]><![endif]-->
