--- a/template/default/common/header.htm
+++ b/template/default/common/header.htm
@@ -1,40 +1,6 @@
-	<!--{subtemplate common/header_common}-->
-	<meta name="application-name" content="$_G['setting']['bbname']" />
-	<meta name="msapplication-tooltip" content="$_G['setting']['bbname']" />
-	<!--{if $_G['setting']['portalstatus']}--><meta name="msapplication-task" content="name=$_G['setting']['navs'][1]['navname'];action-uri={echo !empty($_G['setting']['domain']['app']['portal']) ? 'http://'.$_G['setting']['domain']['app']['portal'] : $_G[siteurl].'portal.php'};icon-uri={$_G[siteurl]}{IMGDIR}/portal.ico" /><!--{/if}-->
-	<meta name="msapplication-task" content="name=$_G['setting']['navs'][2]['navname'];action-uri={echo !empty($_G['setting']['domain']['app']['forum']) ? 'http://'.$_G['setting']['domain']['app']['forum'] : $_G[siteurl].'forum.php'};icon-uri={$_G[siteurl]}{IMGDIR}/bbs.ico" />
-	<!--{if $_G['setting']['groupstatus']}--><meta name="msapplication-task" content="name=$_G['setting']['navs'][3]['navname'];action-uri={echo !empty($_G['setting']['domain']['app']['group']) ? 'http://'.$_G['setting']['domain']['app']['group'] : $_G[siteurl].'group.php'};icon-uri={$_G[siteurl]}{IMGDIR}/group.ico" /><!--{/if}-->
-	<!--{if helper_access::check_module('feed')}--><meta name="msapplication-task" content="name=$_G['setting']['navs'][4]['navname'];action-uri={echo !empty($_G['setting']['domain']['app']['home']) ? 'http://'.$_G['setting']['domain']['app']['home'] : $_G[siteurl].'home.php'};icon-uri={$_G[siteurl]}{IMGDIR}/home.ico" /><!--{/if}-->
-	<!--{if $_G['basescript'] == 'forum' && $_G['setting']['archiver']}-->
-		<link rel="archives" title="$_G['setting']['bbname']" href="{$_G[siteurl]}archiver/" />
-	<!--{/if}-->
-	<!--{if !empty($rsshead)}-->$rsshead<!--{/if}-->
-	<!--{if widthauto()}-->
-		<link rel="stylesheet" id="css_widthauto" type="text/css" href='{$_G['setting']['csspath']}{STYLEID}_widthauto.css?{VERHASH}' />
-		<script type="text/javascript">HTMLNODE.className += ' widthauto'</script>
-	<!--{/if}-->
-	<!--{if $_G['basescript'] == 'forum' || $_G['basescript'] == 'group'}-->
-		<script type="text/javascript" src="{$_G[setting][jspath]}forum.js?{VERHASH}"></script>
-	<!--{elseif $_G['basescript'] == 'home' || $_G['basescript'] == 'userapp'}-->
-		<script type="text/javascript" src="{$_G[setting][jspath]}home.js?{VERHASH}"></script>
-	<!--{elseif $_G['basescript'] == 'portal'}-->
-		<script type="text/javascript" src="{$_G[setting][jspath]}portal.js?{VERHASH}"></script>
-	<!--{/if}-->
-	<!--{if $_G['basescript'] != 'portal' && $_GET['diy'] == 'yes' && check_diy_perm($topic)}-->
-		<script type="text/javascript" src="{$_G[setting][jspath]}portal.js?{VERHASH}"></script>
-	<!--{/if}-->
-	<!--{if $_GET['diy'] == 'yes' && check_diy_perm($topic)}-->
-	<link rel="stylesheet" type="text/css" id="diy_common" href="{$_G['setting']['csspath']}{STYLEID}_css_diy.css?{VERHASH}" />
-	<!--{/if}-->
-</head>
+<!--{subtemplate common/header_common}-->
 
-<body id="nv_{$_G[basescript]}" class="body-$_G[fid] pg_{CURMODULE}{if $_G['basescript'] === 'portal' && CURMODULE === 'list' && !empty($cat)} {$cat['bodycss']}{/if} {if ($_G[groupid]==1)||($_G[groupid]==2)||($_G[groupid]==3)||($_G[groupid]==33)||($_G[groupid]==34)}adminHTML{/if} {if ($_G[groupid]==22)}vipHTML{/if}" onkeydown="if(event.keyCode==27) return false;">
-
-	<!-- jx3pve:dialog-->
-	<!--{template common/dialog}-->
-
-	<!-- jx3pve:float -->
-	<!--{template common/float}-->
+<body id="nv_{$_G[basescript]}" class="f-$_G[fid] body-$_G[fid] pg_{CURMODULE}{if $_G['basescript'] === 'portal' && CURMODULE === 'list' && !empty($cat)} {$cat['bodycss']}{/if}" onkeydown="if(event.keyCode==27) return false;">
 
  	<!-- dz:diy -->
 	<div id="append_parent"></div><div id="ajaxwaitid"></div>
@@ -82,20 +48,6 @@
 			<!-- dz:os menu(old) -->
 			<!--{if $_G['uid']}-->
 				<ul id="myitem_menu" class="p_pop" style="display: none;">
-					<li><a href="home.php?mod=spacecp" id="userpanel-setup">{lang mysetup}</a></li>
-					<li><a href="http://www.yylmacro.com/wp-admin" target="_blank">{lang mymacro}</a></li>
-					<li><a href="forum.php?mod=guide&view=my">{lang myposts}</a></li>
-					<li><a href="home.php?mod=space&do=favorite&view=me">{lang myfavorites}</a></li>
-					<li><a href="home.php?mod=spacecp&ac=profile&op=verify" id="userpanel-verf">{lang myverf}</a></li>
-					<li><a href="home.php?mod=magic" >{lang mymagic}</a></li>
-					<li><a href="home.php?mod=medal" >{lang mymedal}</a></li>
-					<li><a href="home.php?mod=task" >{lang mytask}</a></li>
-					<li><a href="home.php?mod=space&do=friend">{lang friendss}</a></li>
-					<li><a href="home.php?mod=space&do=pm">{lang mypms}</a></li>
-					<!-- <li><a href="http://www.yylmacro.com/misc/choujiang/" id="userpanel-choujiang">{lang goodhappy}</a></li>
-					<li><a href="http://www.yylmacro.com/misc/jifen/" id="userpanel-duihuan">{lang jifenduihuan}</a></li>
-					<li><a href="home.php?mod=spacecp&ac=plugin&id=iplus_gezi:adlist" id="userpanel-guanggao">{lang myguanggao}</a></li>
-					<li><a href="vip.php" id="userpanel-vip">{lang myvip}</a></li> -->
 					<!--{hook/global_myitem_extra}-->
 				</ul>
 			<!--{/if}-->
@@ -104,71 +56,50 @@
 	
 		<!--{ad/headerbanner/wp a_h}-->
 
-<!-- jx3pve:header -->
-<div class="c-header">
-	<div class="c-header-main">
+	<!-- jx3pve:c-header -->
+	<div class="c-header">
 		<div class="wp">
-			<!-- jx3pve:app -->
-			<div class="m-client">
-				<ul>
-					<li><a href="./?mobile=no">电脑版</a>|</li>
-					<li><a href="./?mobile=2">手机版</a>|</li>
-					<li><a href="javascript:void(0)" id="c-header-wxtg">微信</a></li>
-				</ul>
-				<div class="wx" id="c-header-wx" title="打开微信,点击右上角+号进行扫一扫">
-					<p>扫一扫添加公众号</p>
-					<p class="img"><img src="http://img.jx3pve.com/img/header/wx_129.jpg" alt=""></p>
+			<a class="c-header-logo" href="http://www.jx3pve.com">
+				JX3PVE
+			</a>
+			<div class="c-header-search">
+				<div id="bdcs">
+					<div class="bdcs-container">
+						<div class="bdcs-main bdcs-clearfix" id="bdcs-search-nofocus"> 
+							<form action="http://zhannei.baidu.com/cse/search" method="get" target="_blank" class="bdcs-search-form" id="bdcs-search-form"> 
+								<input type="hidden" name="s" value="16227720870024914123" id="bdcs-search-form-s"> 
+								<input type="hidden" name="entry" value="1" id="bdcs-search-form-entry">               
+								<input type="text" autocomplete="off" name="q"  class="bdcs-search-form-input c-header-search-input" id="bdcs-search-form-input-notspan" placeholder="{block/1791}"> 
+								<span class="c-header-search-buttonbg"><i></i></span>             
+								<input type="submit" style="-webkit-appearance: none;" class="bdcs-search-form-submit c-header-search-button" id="bdcs-search-form-submit-notspan" value="">             
+							</form>              
+						</div>
+					</div> 
 				</div>
 			</div>
-			<!-- jx3pve:ac -->
-			<div class="m-ac">
-				<!--{block/976}-->
-			</div>
-			<!-- dz:diy -->
-			<div class="m-diy">
-				<!--<a id="switchblind" href="javascript:;" onclick="toggleBlind(this)" title="{lang switch_blind}" class="switchblind">{lang switch_blind}</a>-->
-				<!--{loop $_G['setting']['topnavs'][1] $nav}-->
-					<!--{if $nav['available'] && (!$nav['level'] || ($nav['level'] == 1 && $_G['uid']) || ($nav['level'] == 2 && $_G['adminid'] > 0) || ($nav['level'] == 3 && $_G['adminid'] == 1))}-->$nav[code]<!--{/if}-->
-				<!--{/loop}-->
-				<!--{if empty($_G['disabledwidthauto']) && $_G['setting']['switchwidthauto']}-->
-					<a href="javascript:;" id="switchwidth" onclick="widthauto(this)" title="{if widthauto()}{lang switch_narrow}{else}{lang switch_wide}{/if}" class="switchwidth"><!--{if widthauto()}-->{lang switch_narrow}<!--{else}-->{lang switch_wide}<!--{/if}--></a>
-				<!--{/if}-->
-				<!--{if $_G['uid'] && !empty($_G['style']['extstyle'])}--><a id="sslct" href="javascript:;" onmouseover="delayShow(this, function() {showMenu({'ctrlid':'sslct','pos':'34!'})});">{lang changestyle}</a><!--{/if}-->
-				<!--{if check_diy_perm($topic)}-->
-					$diynav
-				<!--{/if}-->
-			</div>
-			<!-- jx3pve:panel -->
-			<div class="m-panel">
+			<ul class="c-header-menu">
+				<li class="{if $_G[fid]=='294'}on{/if}"><a href="http://www.jx3pve.com/macro">宏库</a></li>
+				<li class="{if $_G[fid]=='321'}on{/if}"><a href="http://www.jx3pve.com/tool">工具</a></li>
+				<li class="{if $_G[fid]=='384'}on{/if}"><a href="http://www.jx3pve.com/role">职业</a></li>
+				<li class="{if $_G[fid]=='369'}on{/if}"><a href="http://www.jx3pve.com/fam">副本</a></li>
+				<li class="{if $_G[fid]=='67'}on{/if}"><a href="http://www.jx3pve.com/raid">团队</a></li>
+				<li class="{if $_G[fid]=='92'}on{/if}"><a href="http://www.jx3pve.com/face">捏脸</a></li>
+				<li class="{if $_G[fid]=='394'}on{/if}"><a href="http://www.jx3pve.com/biz">交易</a></li>
+				<li class="{if $_G[fid]=='390'}on{/if}"><a href="http://www.jx3pve.com/book">回忆录</a></li>
+				<li class="{if $_G[fid]=='2'}on{/if}"><a href="http://www.jx3pve.com/bbs">综合</a></li>
+				<!-- 新版信息（江湖）包含 买卖、情缘、师徒、团队 -->
+				<!-- 百科包含宠物、奇遇、视频，陆续加入职业与副本 -->
+			</ul>
+			<div class="c-header-user">
 				<!--{template common/header_userstatus}-->
-				<!--{template common/os}-->
-				<!--{if $_G['uid']}-->
-					<ul id="myprompt_menu" class="p_pop header-popmenu" style="display: none;">				
-						<li><a href="home.php?mod=space&do=pm" id="pm_ntc" style="background-repeat: no-repeat; background-position: 0 50%;">
-						<em class="prompt_news{if empty($_G[member][newpm])}_0{/if}"></em>{lang pm_center}</a></li>
-						<li><a href="home.php?mod=follow&do=follower"><em class="prompt_follower{if empty($_G[member][newprompt_num][follower])}_0{/if}"></em><!--{lang notice_interactive_follower}-->{if $_G[member][newprompt_num][follower]}($_G[member][newprompt_num][follower]){/if}</a></li>
-						<!--{if $_G[member][newprompt] && $_G[member][newprompt_num][follow]}-->
-							<li><a href="home.php?mod=follow"><em class="prompt_concern"></em><!--{lang notice_interactive_follow}-->($_G[member][newprompt_num][follow])</a></li>
-						<!--{/if}-->
-						<!--{if $_G[member][newprompt]}-->
-							<!--{loop $_G['member']['category_num'] $key $val}-->
-								<li><a href="home.php?mod=space&do=notice&view=$key"><em class="notice_$key"></em><!--{echo lang('template', 'notice_'.$key)}-->(<span class="rq">$val</span>)</a></li>
-							<!--{/loop}-->
-						<!--{/if}-->
-						<!--{if empty($_G['cookie']['ignore_notice'])}-->
-							<li class="ignore_noticeli"><a href="javascript:;" onclick="setcookie('ignore_notice', 1);hideMenu('myprompt_menu')" title="{lang temporarily_to_remind}"><em class="ignore_notice"></em></a></li>
-						<!--{/if}-->
-					</ul>
-				<!--{/if}-->
 			</div>
+			<a class="c-header-ask" href="http://www.jx3pve.com/forum.php?mod=post&action=newthread&fid=2">提问</a>
 		</div>
 	</div>
-	<!--{template common/menu}-->
-</div>
+
 	<!--{hook/global_header}-->
 	<!--{/if}-->
 
 <!-- jx3pve:content -->
-<div class="box">
+<div class="jx3pve-container box">
 	<!--{template common/nav}-->
-
