--- a/template/default/common/header_userstatus.htm
+++ b/template/default/common/header_userstatus.htm
@@ -1,62 +1,78 @@
 <!--{if $_G['uid']}-->
-<!-- A.已登录 -->
-<div class="m-onlogin">
-
-	<span class="qd mod"><!--{hook/global_cpnav_extra2}--></span>
-
-	<!--{hook/global_usernav_extra3}-->
-
-	<a class="avt mod" href="home.php" title="{lang visit_my_space}">
-		<!--{avatar($_G[uid],small)}-->
-		<i id="c-header-usergroup" class="{if ($_G[groupid]==22)}vip{/if} $_G[groupid]">$_G[group][grouptitle]</i>
-	</a>
-	
-	<a class="username mod" href="home.php">{$_G[member][username]}<i></i></a>
-
-	<span class="pipe mod">|</span><a class="msg mod {if $_G[member][newprompt]} new{/if}" href="home.php?mod=space&do=notice" id="myprompt" onmouseover="showMenu({'ctrlid':'myprompt'});">
-		{lang remind}<!--{if $_G[member][newprompt]}-->($_G[member][newprompt])<!--{/if}-->
-	</a>
-	<span id="myprompt_check"></span>
-	<!--{if empty($_G['cookie']['ignore_notice']) && ($_G[member][newpm] || $_G[member][newprompt_num][follower] || $_G[member][newprompt_num][follow] || $_G[member][newprompt])}--><script language="javascript">delayShow($('myprompt'), function() {showMenu({'ctrlid':'myprompt','duration':3})});</script><!--{/if}-->
-
-	<!--{if ($_G['group']['allowmanagearticle'] || $_G['group']['allowpostarticle'] || $_G['group']['allowdiy'] || getstatus($_G['member']['allowadmincp'], 4) || getstatus($_G['member']['allowadmincp'], 6) || getstatus($_G['member']['allowadmincp'], 2) || getstatus($_G['member']['allowadmincp'], 3))}-->
-	<span class="pipe mod">|</span><a class="admin1 mod" href="portal.php?mod=portalcp"><!--{if $_G['setting']['portalstatus'] }-->{lang portal_manage}<!--{else}-->{lang portal_block_manage}<!--{/if}--></a>
-	<!--{/if}-->
-
-	<!--{if $_G['uid'] && getstatus($_G['member']['allowadmincp'], 1)}-->
-	<span class="pipe mod">|</span><a class="admin2 mod" href="admin.php" target="_blank">{lang admincp}</a>
-	<!--{/if}-->
-
-	<span class="pipe mod">|</span><a class="exit mod" href="member.php?mod=logging&action=logout&formhash={FORMHASH}">{lang logout}</a>
-</div>
+<!--status: is login and uid is not empty-->
+	<div class="c-header-user-login">
+		<div class="m-default" id="c-header-user-login-default">
+			<a href="home.php">
+				<span class="avatar">
+					<!--{avatar($_G[uid],small)}-->
+					<i id="c-header-usergroup" class="{if ($_G[groupid]==22)}vip{/if} $_G[groupid]">$_G[group][grouptitle]</i>
+				</span>
+				<span class="username">
+					{$_G[member][username]}
+				</span>
+			</a>
+		</div>
+		<div class="m-extend" id="c-header-user-login-extend">
+			<ul>
+				<li><a href="./home.php"><i class="os"></i>个人中心</a></li>
+				<li><a href="./home.php?mod=space&do=pm"><i class="msg"></i>消息 (<em id="c-header-msgcount">$_G[member][newpm]</em>)</a></li>
+				<li><a href="./home.php?mod=spacecp&ac=profile&op=password"><i class="setting"></i>设置</a></li>
+				<!--{if ($_G['group']['allowmanagearticle'] || $_G['group']['allowpostarticle'] || $_G['group']['allowdiy'] || getstatus($_G['member']['allowadmincp'], 4) || getstatus($_G['member']['allowadmincp'], 6) || getstatus($_G['member']['allowadmincp'], 2) || getstatus($_G['member']['allowadmincp'], 3))}-->
+				<li class="e-admin-bar"><a href="portal.php?mod=portalcp" target="_blank"><i class="mag"></i><!--{if $_G['setting']['portalstatus'] }-->{lang portal_manage}<!--{else}-->{lang portal_block_manage}<!--{/if}--></a></li>
+				<!--{/if}-->
+				<!--{if $_G['uid'] && getstatus($_G['member']['allowadmincp'], 1)}-->
+				<li class="e-admin-bar"><a href="admin.php" target="_blank"><i class="mag"></i>{lang admincp}</a></li>
+				<!--{/if}-->
+				<li><a href="member.php?mod=logging&action=logout&formhash={FORMHASH}"><i class="exit"></i>{lang logout}</a></li>
+			</ul>
+			<div class="none">
+				<!--{hook/global_usernav_extra1}-->
+				<!--{hook/global_usernav_extra4}-->
+				<!--{hook/global_usernav_extra2}-->
+				<!--{hook/global_usernav_extra3}-->
+			</div>
+		</div>
+	</div>
 <!--{elseif !empty($_G['cookie']['loginuser'])}-->
-<div class="m-onlogin">
-	<a class="noborder" id="loginuser"><!--{echo dhtmlspecialchars($_G['cookie']['loginuser'])}--></a>
-	<span class="pipe mod">|</span><a class="mod" href="member.php?mod=logging&action=login" onclick="showWindow('login', this.href)">{lang activation}</a>
-	<span class="pipe mod">|</span><a class="mod" href="member.php?mod=logging&action=logout&formhash={FORMHASH}">{lang logout}</a>
-</div>
+<!--status: cookie login-->
+	<div class="c-header-user-logout">
+		<div class="m-default">
+			<span class="default_avatar"></span>
+			<a class="noborder" id="loginuser"><!--{echo dhtmlspecialchars($_G['cookie']['loginuser'])}--></a> | 
+			<a href="member.php?mod=logging&action=login" onclick="showWindow('login', this.href)">{lang activation}</a> | 
+			<a href="member.php?mod=logging&action=logout&formhash={FORMHASH}">{lang logout}</a>
+		</div>
+	</div>
 <!--{elseif !$_G[connectguest]}-->
-<!-- 未登录 -->
-<div class="m-nologin">
-	<p class="extend">
-		<a href="connect.php?mod=login&op=init&referer=http%3A%2F%2Fwww.jx3pve.com%2F.%2F&statfrom=login" class="qq" title="用QQ登陆"></a> 
-		<a href="mpage_weibo-login.html" class="wb" title="用新浪微博登陆"></a> 
-		<a href="wechat-login.html" class="wx" title="微信扫一扫登陆"></a> 
-	</p>
-	<p class="default">
-		<a href="member.php?mod=logging&action=login">{lang login}</a> | 
-		<a href="member.php?mod=register">{lang register}</a>
-	</p>
-</div>  
+<!--status: guest-->
+	<div class="c-header-user-logout">
+		<div class="m-default">
+			<a href="member.php?mod=logging&action=login">{lang login}</a> | 
+			<a href="member.php?mod=register">{lang register}</a>
+		</div>
+		<div class="m-extend">
+		</div>
+	</div>  
 <!--{else}-->
-<div class="m-onlogin">
-	<a class="avt mod" href="javascrip:void(0)" style="cursor:default;">
-		<!--{avatar(0,small)}-->
-	</a>
-	<a class="username mod" href="javascrip:void(0)" style="cursor:default;">
-		{$_G[member][username]}
-		<!--{hook/global_usernav_extra1}-->
-	</a>
-	<span class="pipe mod">|</span><a class="exit mod" href="member.php?mod=logging&action=logout&formhash={FORMHASH}">{lang logout}</a>
-</div>
+<!--status: qq guest-->
+	<div class="c-header-user-logout">
+		<div class="m-default">
+			<span class="default_avatar"></span>
+			<span>{$_G[member][username]}<!--{hook/global_usernav_extra1}--></span> | 
+			<a href="member.php?mod=logging&action=logout&formhash={FORMHASH}">{lang logout}</a>
+		</div>
+	</div>
+<!--{/if}-->
+
+<script src="http://js.jx3pve.com/js/mod/header.js"></script>
+
+<!--{if $_G['uid']}-->
+<p id="c-header-msgdetails" class="none">
+	<span>$_G[member][newpm]</span>
+	<!--{if $_G[member][newprompt]}-->
+		<!--{loop $_G['member']['category_num'] $key $val}-->
+			<span>$val</span>
+		<!--{/loop}-->
+	<!--{/if}-->
+</p>
 <!--{/if}-->
