--- a/template/default/common/nav.htm
+++ b/template/default/common/nav.htm
@@ -10,11 +10,12 @@
 			<li class="u-fam"><a href="./fam">副本<span>Fam</span></a></li>
 			<li class="u-raid"><a href="./raid">团队<span>Raid</span></a></li>
 			<li class="u-face"><a href="./face">捏脸<span>Face</span></a></li>
-			<li class="u-biz"><a class="new" href="./biz">交易<span>Biz</span></a></li>
+			<li class="u-biz"><a href="./biz">交易<span>Biz</span></a></li>
 			<!-- <li class="u-qiyu"><a href="./qiyu">奇遇<span>Qiyu</span></a></li>
 			<li class="u-book"><a href="./book">茶馆<span>Book</span></a></li>
 			<li class="u-pet"><a href="./pet">宠物<span>Pet</span></a></li> -->
-			<li class="u-bbs"><a href="./bbs">论坛<span>Forum</span></a></li>
+			<li class="u-bbs"><a class="new" href="./bbs">综合<span>Forum</span></a></li>
+			<!-- <li class="u-wiki"><a class="disabled" href="./wiki" title="即将上线">百科<span>Wiki</span></a></li> -->
 		</ul>
 	</div>
 </div>
