--- a/template/mix/forum/forumdisplay_list.htm
+++ b/template/mix/forum/forumdisplay_list.htm
@@ -137,11 +137,6 @@
 								<!-- 头像 -->
 								<!-- <a class="avatar" href="home.php?mod=space&uid=$thread[authorid]" c="1"{if $groupcolor[$thread[authorid]]} style="color: $groupcolor[$thread[authorid]];"{/if}><img src="http://static.jx3pve.com/uc_server/avatar.php?uid=$thread[authorid]&size=small" /></a> -->
 
-								<!-- 最后更新时间 -->
-								<span class="e-lastedit">
-									$thread[lastedit]
-								</span>
-
 								<!-- 更多操作 -->
 								<a href="javascript:;" id="content_$thread[tid]" class="showcontent y" title="{lang content_actions}" onclick="CONTENT_TID='$thread[tid]';CONTENT_ID='$thread[id]';showMenu({'ctrlid':this.id,'menuid':'content_menu'})"></a>
 								<!--{if in_array($thread['displayorder'], array(1, 2, 3, 4))}-->
@@ -165,8 +160,15 @@
 									<!--{/if}-->
 								</span>
 
+								<span class="mix-postdate">
+									$thread[dateline]
+								</span>
+
 								<!-- 标题 -->
-								<a class="article" href="forum.php?mod=viewthread&tid=$thread[tid]&{if $_GET['archiveid']}archiveid={$_GET['archiveid']}&{/if}extra=$extra"$thread[highlight]{if $thread['isgroup'] == 1 || $thread['forumstick']} target="_blank"{else} onclick="atarget(this)"{/if} class="s xst">$thread[subject]</a>
+								<a class="article" href="forum.php?mod=viewthread&tid=$thread[tid]&{if $_GET['archiveid']}archiveid={$_GET['archiveid']}&{/if}extra=$extra"$thread[highlight]{if $thread['isgroup'] == 1 || $thread['forumstick']} target="_blank"{else} onclick="atarget(this)"{/if} class="s xst">
+									<!--{template jx3pve/u_addex}-->
+									$thread[subject]
+								</a>
 
 								<!-- 追加 -->
 								<!--{template jx3pve/u_addef}-->
