--- a/css/common/c-header.less
+++ b/css/common/c-header.less
@@ -35,16 +35,17 @@
 .c-header-search-input{
 	.db;
 	padding: 7px 50px 7px 10px;
-    width: 128px;
+    width:100%;
+    *width:180px;
     color: #49525c;
     line-height: 17px;
-    height:17px;
+    //height:17px;
     background-color: #e1eaf2;
     border: 1px solid #045bb2;
     border-radius: 4px;
     box-shadow: inset 0 1px 3px rgba(0,0,0,.2),0 1px 0 rgba(255,255,255,.1);
     outline: 0;
-    //box-sizing: border-box;
+    box-sizing: border-box;
     -webkit-transition: all .2s ease-in-out;
     transition: all .2s ease-in-out;
     
@@ -57,7 +58,8 @@
 .c-header-search-buttonbg{
 	.db;.pa;.rt(0,0);
     width: 40px;
-    height: 100%;
+    height: 33px;
+    *height:29px;
     background: #0e78e7;
     background: -webkit-linear-gradient(top,#0e7bef,#0d73da);
     background: linear-gradient(to bottom,#0e7bef,#0d73da);
@@ -72,6 +74,11 @@
     	.ct(o,15px,15px);
     	.db;.size(15px);
     	background:url('@{url}header/icons.png') no-repeat 0 -40px;
+    }
+}
+.ie8,.ie9,.ie10,.ie11{
+    .c-header-search-buttonbg{
+        height:32px;
     }
 }
 
@@ -128,7 +135,7 @@
     cursor: pointer;
     -webkit-transition: all .2s ease-in-out;
     transition: all .2s ease-in-out;
-    &:hover{color:@blue-toolight;}
+    &:hover{color:@blue-light;}
 }
 
 .c-header-user{
@@ -159,6 +166,7 @@
 		    background: linear-gradient(to bottom,#055fb8,#095fb3);
 		    box-shadow: inset 0 0 2px rgba(0,0,0,.12);
     	}
+        a:hover{text-decoration:none;}
     }
     .avatar{
     	.pr;
@@ -179,6 +187,7 @@
     }
     .username{
     	.db;.nobreak;
+        a:hover{text-decoration:none;}
     }
 
     .m-extend{
@@ -252,8 +261,22 @@
 	}
 	.m-default{
 		.color(#628BC5,#fff,#fff);
+        a:hover{text-decoration:underline;}
 	}
 }
 
+//隐藏门户管理&管理中心
 .e-admin-bar{.none;}
 .adminHTML .e-admin-bar{.db;}
+
+//嵌入头（居中版）
+.iframe-header{
+}
+//嵌入头（超级宏1180px）
+.iframe-header-yylmacro{
+    .wp{.w(1180px);.auto(x);}
+}
+//嵌入头（百度搜索宽屏版）
+.iframe-header-search{
+    .wp{.w(auto);padding:0 20px;}
+}
