--- a/template/default/common/header_common.htm
+++ b/template/default/common/header_common.htm
@@ -9,7 +9,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 	<meta name="renderer" content="webkit">
 	<meta http-equiv="Cache-Control" content="no-siteapp"/>
-	<meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no,minimal-ui"/>
+	<!-- <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no,minimal-ui"/> -->
 
 	<!-- SEO -->
 	<title><!--{if !empty($navtitle)}-->$navtitle <!--{/if}--><!--{if empty($nobbname)}--> $_G['setting']['bbname']<!--{/if}--></title>
