Signed-off-by: 17229398@qq.com <17229398@qq.com>

--- a/template/default/common/footer.htm
+++ b/template/default/common/footer.htm
@@ -221,5 +221,7 @@
 			</script>
 		<!--{/if}-->
 	<!--{eval output();}-->
+
+	<script src="http://js.jx3pve.com/js/mod/footer.js"></script>
 </body>
 </html>
