--- a/css/common.less
+++ b/css/common.less
@@ -1,5 +1,10 @@
 @import url('public/base.less');		//函数
-@import url('public/color.less');		//配色
 @import url('public/path.less');		//路径
 
-@import url('common/c-header.less');	//公共头
+@import url('global/var.less');			//常量
+@import url('global/color.less');		//配色
+@import url('global/font.less');		//默认字体
+@import url('global/layout.less');		//默认布局
+
+@import url('common/header/header.less');		//公共头
+@import url('common/footer/footer.less');		//公共底部
