--- a/css/global.less
+++ b/css/global.less
@@ -23,7 +23,7 @@
 /*global 全局变量
 ------------------------------------------*/
 @import url('tobe/global/var.less');			//变量
-@import url('tobe/global/common.less');		//字体
+/*@import url('tobe/global/common.less');		//字体*/
 @import url('tobe/global/layout.less');		//基本布局
 @import url('tobe/global/icon.less');		//图标
 
@@ -44,11 +44,11 @@
 ------------------------------------------*/
 @import url('tobe/module/search.less');		//搜索
 /*@import url('tobe/module/header.less');		//头部*/
-@import url('tobe/module/nav.less');			//导航
-@import url('tobe/module/footer.less');		//底部
+/*@import url('tobe/module/nav.less');			//导航*/
+/*@import url('tobe/module/footer.less');		//底部*/
 @import url('tobe/module/dialog.less');		//对话框
 @import url('tobe/module/float.less');		//浮层
-@import url('tobe/module/404.less');			//404错误
+/*@import url('tobe/module/404.less');		//404错误*/
 
 
 /*discuz 默认样式重置
