--- a/css/system/sitemap.less
+++ b/css/system/sitemap.less
@@ -1,6 +1,6 @@
 @import url('../public/base.less');		//函数
 @import url('../public/path.less');		//路径
-@import url('../public/color.less');	//配色
+@import url('../global/color.less');	//配色
 
 .sitemap-container{
 	padding:20px;
