--- a/css/tobe/global/layout.less
+++ b/css/tobe/global/layout.less
@@ -1,8 +1,8 @@
 /*DOM 结构
 ---------------------------------------------------*/
-body{
+/*body{
 	min-width:1180px;
-}
+}*/
 //内容区
 .box {
     padding-top:@c-header-height;
