--- a/source/plugin/ljdaka/template/daka.htm
+++ b/source/plugin/ljdaka/template/daka.htm
@@ -1,7 +1,7 @@
 <!--{block return}-->
 <!--{if $this->check&&!empty($this->xianshi)}-->
-<a  href="plugin.php?id=ljdaka:ranklist"  style="cursor:pointer"><font color="red">{lang ljdaka:daka11}</font></a>
+<a  href="plugin.php?id=ljdaka:ranklist"><i class="sign"></i>{lang ljdaka:daka11}</a>
 <!--{else}-->
-<a  href="#" class="user-qiandao" onclick='showWindow("ljdaka","plugin.php?id=ljdaka:daka&action=msg&formhash={FORMHASH}");' style="cursor:pointer">{lang ljdaka:daka1}</a>
+<a href="#" onclick='showWindow("ljdaka","plugin.php?id=ljdaka:daka&action=msg&formhash={FORMHASH}");' id="c-daka-link"><i class="sign"></i>{lang ljdaka:daka1}</a>
 <!--{/if}-->
 <!--{/block}-->
