紧急公告、IE67提醒、旧站点地图跳转

--- a/css/common/header/search.less
+++ b/css/common/header/search.less
@@ -10,7 +10,7 @@
 	.db;
 	padding: 7px 50px 7px 10px;
     width:100%;
-    //*width:180px;
+    *width:318px;
     color: #49525c;
     line-height: 17px;
     //height:17px;
