--- a/css/global.less
+++ b/css/global.less
@@ -47,7 +47,7 @@
 /*@import url('tobe/module/nav.less');			//导航*/
 /*@import url('tobe/module/footer.less');		//底部*/
 @import url('tobe/module/dialog.less');		//对话框
-@import url('tobe/module/float.less');		//浮层
+/*@import url('tobe/module/float.less');		//浮层*/
 /*@import url('tobe/module/404.less');		//404错误*/
 
 
