--- a/css/global/font.less
+++ b/css/global/font.less
@@ -1,5 +1,5 @@
 body{
-    font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;
+    font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif,"宋体";
     font-size: 13px;
     line-height: 1.7;
     word-wrap: break-word;
