--- a/template/default/common/float.htm
+++ b/template/default/common/float.htm
@@ -1,6 +1,6 @@
 <div class="c-float-help" id="c-float-help">
 	<ul>
-		<li><a class="feedback" href="./feedback" target="_blank" title="意见反馈"><i></i>反馈</a></li>
+		<li><a class="feedback" href="./feedback" target="_blank" title="意见反馈"><i></i>意见反馈</a></li>
 		<li><a class="gotop" id="c-float-gotop" href="javascript:void(0)" title="回到顶部">回到顶部</a></li>
 	</ul>
 	<span class="close" id="c-float-close"><i></i><em>关闭</em></span>
