--- a/template/default/common/footer.htm
+++ b/template/default/common/footer.htm
@@ -57,7 +57,7 @@
 
 	<!--{hook/global_footer}-->
 
-	<!-- jx3pve:footer -->
+	<!-- jx3pve:c-footer -->
 	<div class="c-footer">
 		<div class="wp">
 			<div class="c-footer-lang">
@@ -128,6 +128,10 @@
 	<!-- jx3pve:c-float -->
 	<!--{template common/float}-->
 
+	<!-- jx3pve:c-alert -->
+	<!--{template common/alert}-->
+
+	<!-- jx3pve:c-showbox -->
 	<div class="c-showbox" id="c-showbox">
 		<span class="c-showbox-close" id="c-showbox-close" title="关闭"></span>
 		<div class="c-showbox-content" id="c-showbox-content"></div>
@@ -232,6 +236,8 @@
 		</script>
 	<!--{/if}-->
 <!--{eval output();}-->
+	
+	<script src="http://js.jx3pve.com/js/mod/footer.js"></script>
 
 </body>
 </html>
