--- a/css/system/sitemap.less
+++ b/css/system/sitemap.less
@@ -14,17 +14,18 @@
 
 .sitemap-block{
 	margin-bottom:20px;
-	.clearfix;
+	padding-left:80px;
+	.pr;
 
 	.color(#222,@blue-link,@blue-link);
 
 	h2{
-		.fl;
-		.bold;margin-right:20px;
+		.bold;
+		.pa;.lt(0,0);
 	}
 
 	ul{
-		.fl;
+		.clearfix;
 	}
 
 	li{
