--- a/template/default/common/panel.htm
+++ b/template/default/common/panel.htm
@@ -62,7 +62,7 @@
 			</div>
 		</div>
 
-		<script src="http://test.jx3pve.com/js/mod/header.js"></script>
+		<script src="http://css.jx3pve.com/js/mod/header.js"></script>
 
 	<!--{hook/global_header}-->
 	<!--{/if}-->
