--- a/template/yylmacro/portal/portal_topic_sitemap.htm
+++ b/template/yylmacro/portal/portal_topic_sitemap.htm
@@ -8,8 +8,14 @@
 		<div class="sitemap-block">
 			<h2>网站系统</h2>
 			<ul>
+				<li><a href="./sitemap">站点地图</a></li>
 				<li><a href="http://search.jx3pve.com/cse/search?s=16227720870024914123&entry=1&q=" target="_blank">搜索系统</a></li>
-				<li><a href="http://www.jx3pve.com/system/404.html" target="_blank">404错误引导</a></li>
+				<li><a href="http://www.jx3pve.com/feedback" target="_blank">搜索置顶申请</a></li>
+				<li><a href="./system/404.html" target="_blank">404错误引导</a></li>
+			</ul>
+			<ul>
+				<li><a href="./faq">FAQ自助系统</a></li>
+				<li><a href="./misc.php?mod=stat">站点统计</a></li>
 			</ul>
 		</div>
 
@@ -21,11 +27,12 @@
 		</div>
 
 		<div class="sitemap-block">
-			<h2>反馈系统</h2>
+			<h2>网站页面</h2>
 			<ul>
-				<li><a href="http://www.jx3pve.com/feedback" target="_blank">搜索置顶申请</a></li>
+				<li><a href="./">网站首页</a></li>
 			</ul>
 		</div>
+
 	</div>
 </div>
 <!--{subtemplate common/footer}-->
