--- a/css/global.less
+++ b/css/global.less
@@ -145,7 +145,7 @@
 @import url('tobe/user/vip/pay.less');				//购买
 @import url('tobe/user/vip/buy.less');				//充值
 @import url('tobe/user/vip/vip.less');				//会员
-@import url('tobe/user/sys/faq.less');				//帮助
+/*@import url('tobe/user/sys/faq.less');				//帮助*/
 @import url('tobe/user/sys/feedback.less');			//反馈
 @import url('tobe/user/vip/vip-pc.less');			//新版PC VIP
 @import url('tobe/user/vip/buy-pc.less');			//新版PC 充值
