--- a/template/default/common/footer.htm
+++ b/template/default/common/footer.htm
@@ -82,12 +82,12 @@
 
 			<div class="c-footer-nav">
 				<a href="./sitemap">网站地图</a>
-				<a href="#111">更新日志</a>
+				<a href="./forum.php?mod=forumdisplay&fid=392&filter=sortid&sortid=24">更新日志</a>
 				<a href="#">版权声明</a>
 				<a href="#">免责声明</a>
-				<a href="#">友情链接</a>
-				<a href="#">加入我们</a>
-				<a href="#">合作联系</a>
+				<a href="./portal.php?mod=topic&topicid=65">友情链接</a>
+				<a href="./forum.php?mod=forumdisplay&fid=392&filter=sortid&sortid=26">加入我们</a>
+				<a href="./portal.php?mod=topic&topicid=65">合作联系</a>
 			</div>
 
 			<div class="c-footer-official">
