fix input focus style
Signed-off-by: 17229398@qq.com <17229398@qq.com>

--- a/css/ui/button.less
+++ b/css/ui/button.less
@@ -28,6 +28,7 @@
 }
 
 .px:focus{
-    box-shadow:0 0 3px #ccc inset;
+    //box-shadow:0 0 3px #ccc inset;
+    box-shadow: 0 0 3px #8DACE6;
     border-color:#0D6EB8;
 }
