--- a/css/common/header/all.less
+++ b/css/common/header/all.less
@@ -23,7 +23,7 @@
 	transition:0.2s ease-in-out;
 }
 
-.c-header-ask{
+.c-header-btn{
 	.fr;
 	width: 66px;
     height: 31px;
@@ -44,6 +44,21 @@
     -webkit-transition: all .2s ease-in-out;
     transition: all .2s ease-in-out;
     &:hover{color:@blue-light;}
+}
+
+.c-header-ask{
+    &:extend(.c-header-btn);
+}
+
+.c-header-sign{
+    &:extend(.c-header-btn);
+    margin-left:10px;
+    i{
+        .dbi;.y;
+        background-image:url('@{url}header/qiandao.png');
+        background-position: 0 0;
+        .size(20px);
+    }
 }
 
 
