按钮下按时状态修复

--- a/css/ui/form.less
+++ b/css/ui/form.less
@@ -1,3 +1,4 @@
+//按钮
 .pn,.pnc{
     color: #fff!important;
     text-shadow: 0 -1px 0 rgba(0,0,0,.5);
@@ -19,6 +20,10 @@
     //box-sizing: border-box;
 }
 
+.pnc:active,.pn:active{
+    background-position:0 0;
+}
+
 .px, .pt, .ps, select{
     border: 1px solid #ddd;
     box-shadow: 0 0 1px #ccc inset;
@@ -27,8 +32,11 @@
     transition:0.2s ease-in-out;
 }
 
+//文本框
 .px:focus{
     //box-shadow:0 0 3px #ccc inset;
     box-shadow: 0 0 3px #8DACE6;
     border-color:#0D6EB8;
 }
+
+//
