--- a/template/yylmacro/portal/portal_topic_sitemap.htm
+++ b/template/yylmacro/portal/portal_topic_sitemap.htm
@@ -1,4 +1,4 @@
-<!--{subtemplate common/header}-->
+<!--{subtemplate common/header_m}-->
 <link rel="stylesheet" href="http://css.jx3pve.com/css/system/sitemap.css" type="text/css" />
 <div class="sitemap-container">
 	<div class="wp">
